fixed alignment of example card content

--- a/crowdsourcing/custom_world_interactions/webapp/src/Views/Preview/styles.css
+++ b/crowdsourcing/custom_world_interactions/webapp/src/Views/Preview/styles.css
@@ -18,5 +18,5 @@
     font-weight: bold;
     color: white;
     text-align: center;
-    font-size: 5em;
+    font-size: 4em;
 }
