--- a/crowdsourcing/custom_world_interactions/webapp/src/components/ExampleCard/styles.css
+++ b/crowdsourcing/custom_world_interactions/webapp/src/components/ExampleCard/styles.css
@@ -13,14 +13,40 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
 }
-.card-label {
+.card-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.card-item__label {
     font-weight:bold;
+    margin-right: 5px;
 }
 
-.card-text {
+.card-item__text {
+    font-size: 18px;
+    text-align: left;
+    width:80%;
+}
+
+.card-item__badreason {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+}
+
+.card-label__badreason {
+    text-decoration: underline;
+    color: red;
+    font-weight: bold;
+    text-align: center;
+}
+
+.card-item__text--badreason {
     font-size: 18px;
     text-align: center;
+
 }
